--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ body {
 }
 
 .btn--small {
-	@apply uppercase font-semibold border-2 border-white px-3 py-2 hover:bg-white hover:text-black focus:bg-white focus:text-black transform transition-colors ease-in-out duration-500;
+	@apply uppercase mx-10 font-semibold border-2 border-white px-3 py-2 hover:bg-white hover:text-black focus:bg-white focus:text-black transform transition-colors ease-in-out duration-500;
 }
 
 .btn--bigger {
@@ -89,6 +89,26 @@ body {
 
 .img {
 	@apply w-full h-auto object-fill;
+}
+
+form {
+	@apply flex flex-col h-auto justify-center text-white w-full md:w-2/3 lg:w-1/3 mx-auto;
+}
+
+form div {
+	@apply flex flex-col justify-center focus-within:bg-gray-900 focus-within:bg-opacity-70 px-10 py-5;
+}
+
+input {
+	@apply border focus:outline-none focus:ring-4 focus:ring-blue rounded-md text-gray-800 px-2 py-1 text-lg bg-gray-300 focus:bg-gray-50;
+}
+
+label {
+	@apply block mt-3 mb-2 text-xl;
+}
+
+input[type='radio'] {
+	@apply mr-4 focus:ring-0;
 }
 
 @media (min-width: 640px) {
