--- a/src/index.css
+++ b/src/index.css
@@ -64,15 +64,15 @@ body {
 }
 
 .btn--big {
-	@apply border-2 border-black text-black hover:bg-black hover:text-white hover:shadow-sm focus:bg-black focus:text-white focus:shadow-sm;
+	@apply border-2 cursor-pointer border-black text-black hover:bg-black hover:text-white hover:shadow-sm focus:bg-black focus:text-white focus:shadow-sm;
 }
 
 .btn--small {
-	@apply uppercase mx-10 font-semibold border-2 border-white px-3 py-2 hover:bg-white hover:text-black focus:bg-white focus:text-black transform transition-colors ease-in-out duration-500;
+	@apply uppercase cursor-pointer text-center mx-10 font-semibold border-2 border-white px-3 py-2 hover:bg-white hover:text-black focus:bg-white focus:text-black transform transition-colors ease-in-out duration-500;
 }
 
 .btn--bigger {
-	@apply border-2 bg-white text-black hover:bg-black hover:text-white hover:shadow-sm focus:bg-black focus:text-white focus:shadow-sm mt-10;
+	@apply border-2 cursor-pointer text-center bg-white text-black hover:bg-black hover:text-white hover:shadow-sm focus:bg-black focus:text-white focus:shadow-sm mt-10;
 }
 
 .text-block {
