--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@ body {
 }
 
 form {
-	@apply flex flex-col h-auto justify-center text-white w-full md:w-2/3 lg:w-1/3 mx-auto;
+	@apply flex flex-col h-auto justify-center text-white w-full md:max-w-xl lg:max-w-3xl mx-auto;
 }
 
 form div {
@@ -104,7 +104,7 @@ input {
 }
 
 label {
-	@apply block mt-3 mb-2 text-xl;
+	@apply block lg:mt-3 lg:mb-2 text-xl;
 }
 
 input[type='radio'] {
