--- a/src/index.css
+++ b/src/index.css
@@ -13,15 +13,6 @@
 
 @font-face {
 	font-family: 'Maven Pro';
-	src: url('./assets/fonts/MavenPro-SemiBold.woff2') format('woff2'),
-		url('./assets/fonts/MavenPro-SemiBold.woff') format('woff');
-	font-weight: 600;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: 'Maven Pro';
 	src: url('./assets/fonts/MavenPro-Regular.woff2') format('woff2'),
 		url('./assets/fonts/MavenPro-Regular.woff') format('woff');
 	font-weight: 400;
@@ -39,7 +30,7 @@ h6 {
 }
 
 body {
-	@apply text-gray-600 bg-black overflow-x-hidden;
+	@apply text-gray-400 bg-black overflow-x-hidden;
 }
 
 .hero {
@@ -84,7 +75,7 @@ body {
 }
 
 .text-block--body {
-	@apply text-3xl tracking-wide leading-tight md:leading-tight md:text-4xl text-gray-400;
+	@apply text-3xl tracking-wide leading-tight md:leading-tight md:text-4xl;
 }
 
 .img {
